[package]
name = "timekeeper"
description = "Proof of History (PoH)"
authors = ["Rivane Rasetiansyah <re@nvll.me>"]
repository = "https://github.com/rvnrstnsyh/timekeeper"
version = "0.0.7"
edition = "2024"
rust-version = "1.86.0"

[lib]
name = "timekeeper"
path = "src/lib.rs"

[dependencies]
blake3 = "1.8.2"
chrono = "0.4.41"
crossterm = "0.29.0"
hex = "0.4.3"
rand = "0.9.1"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.149"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.test]
opt-level = 0
lto = true
codegen-units = 1
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[[bench]]
name = "poh_benchmark"
harness = false
