[workspace]
resolver = "3"
members = ["lib", "poh", "thread"]

[workspace.package]
authors = ["Rivane Rasetiansyah <re@nvll.me>"]
repository = "https://github.com/rvnrstnsyh/timekeeper"
homepage = "https://nvll.me"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
criterion = { version = "0.5.1", features = ["html_reports"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
needless_return = "allow"
too_many_arguments = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.test]
opt-level = 0
lto = true
codegen-units = 1
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true
