[package]
name = "thread"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
affinity = "0.1.2"
anyhow.workspace = true
num_cpus = "1.16.0"
serde.workspace = true
thread-priority = "1.2.0"

[lints]
workspace = true

[[test]]
name = "native_operations"
path = "test/native_operations.rs"
harness = true
